small changes to increase iframes size

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <body>
   <style>
     iframe {
-      width: 50%;
-      height: 50%;
+      width: 100%;
+      height: 100%;
     }
   </style>
   <h1>XHR in iframe</h1>
-  <iframe src="https://www.bankid.no/privat/los-mitt-bankid-problem/test-din-bankid---autentisering/" data-cy="bankid" id="bankid" title='bankid'>
+  <iframe
+    src="https://www.bankid.no/privat/los-mitt-bankid-problem/test-din-bankid---autentisering/"
+    data-cy="bankid"
+    id="bankid"
+    title="bankid"
+    height="800"
+    width="800"
+  >
   </iframe>
-
 </body>
